--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ esp/
 .vscode/
 */*/build
 */*/build/
+*/*/lab2_image.elf
 
 !*/*/main/*
 !*/*/CMakeLists.txt
@@ -14,4 +15,3 @@ esp/
 !*/*/sdkconfig
 !*/report.pdf
 !*/*/gdbinit
-!*/*/lab2_image.elf
