--- a/lab8/lab1-2-rust/Cargo.toml
+++ b/lab8/lab1-2-rust/Cargo.toml
@@ -30,6 +30,7 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.48", default-features = false }
+esp-idf-sys = { version = "0.34.1", default-features = false }
 
 [build-dependencies]
 embuild = "0.31.3"
